site/src/components/code.module.css
.code {
	/* Make sure there's space to scroll around it: */
	/* max-height: clamp(5rem, 100vh - var(--fluid), 30rem); */
	overflow-x: auto;
	tab-size: 2;

	@apply dark:border-faint ~fluid-[13rem]/[15rem] border-faint rounded-lg border !bg-zinc-50 !px-0 !py-5 !text-sm [scrollbar-color:theme(colors.white/.3)_transparent] [scrollbar-width:thin] dark:!bg-zinc-900 dark:[scrollbar-color:theme(colors.white/.1)_transparent];
}

.code :global(code) {
	display: grid;
	min-width: 100%;
}

.code :global(.line) {
	@apply inline-block px-5;
}

.code :global(.line:empty):before {
	content: ' ';
}

.code :global(.line:last-of-type:empty) {
	display: none;
}

.code :global(span[style*='font-weight']) {
	font-weight: normal !important;
}

